@@ -1,3 +1,11 @@
+2008-04-18  Nicolas Bruguier  <gandalfn@club-internet.fr>
+
+    * src/async-getprop.c:
+    * src/ccm-debug.c:
+    * src/ccm-drawable.c:
+    * src/ccm-screen.c:
+    * src/ccm-window.c: Fix a crash on get property async, add debug time.
+
 2008-04-17  Nicolas Bruguier  <gandalfn@club-internet.fr>
 
     * src/ccm-screen.c: Damage all screen on window unmap since we don't found
